# climacoin-node

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: epic.md  story.md  task.md  test-cases.md
.github/workflows/: integration-test.yml
chainspec/: customSpec.json  customSpecRaw.json  customSpec_2.json  devSpec.json  devSpecRaw.json  localSpec.json  localSpecRaw.json
chainspec/testnet/: spec.json  specRaw.json
docs/: nginx-setup.md  nominator-setup.md  rust-setup.md  validator-setup.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/ocw-demo/: Cargo.toml
pallets/ocw-demo/src/: lib.rs  tests.rs
pallets/offchain-fetch/: Cargo.toml
pallets/offchain-fetch/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs  types.rs
runtime/src/configs/: collective.rs  contracts.rs  election_provider_multi_phase.rs  mod.rs  offchain_fetch.rs  staking.rs  system.rs  treasury.rs
scripts/: gen_keypair.sh  insert_keys.sh  run_dev.sh
