[workspace]
members = [
    "node",
    "pallets/offchain-fetch",
    "runtime",
]
[profile.release]
panic = "unwind"

[patch.'https://github.com/paritytech/substrate']
pallet-staking = { git = "https://github.com/climatechglobal/pallet-staking", branch = "main" }
pallet-treasury = { git = "https://github.com/climatechglobal/pallet-treasury", branch = "main" }
